--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,11 @@ test:7.4:
 test:8:
     image: php:8.0
     script:
-        - php --version && php ./vendor/bin/phpunit tests --coverage-text --colors=never
+        - php --version && php ./vendor/bin/phpunit tests --coverage-text --colors=never --log-junit junit-report.xml
+    artifacts:
+        when: always
+        paths:
+            - junit-report.xml
+        reports:
+            junit: junit-report.xml
+
